tdf#170567: Avoid resetting destination document's data

When clipboard document is set up in Biff12 paste code, a call to
ScDocument::ResetClip is required. In nearby code, the destination
document is used for that, which was why I did the same.

But it turned out, that following call to SfxObjectShell::DoLoad
called ScDocShell::InitNew, and there some shared pooled items got
reset, including an ScPatternAttr used for default attributes. It
included clearing style pattern's, and that change affected target
document. Then, in export, the document's formatting ranges were
collected in ScXMLExport::AddStyleFromCells, which checked direct
properties of each range. The document's default ScPatternAttr was
missing style, and ScCellRangesBase::GetOnePropertyState returned
PropertyState_AMBIGUOUS_VALUE, and ScXMLExport::AddStyleFromCells
got empty aPropStates, without style name (which is documented to
not have a default, so it must always be present). In the end, the
default-formatted document ranges didn't create respective entries
in ScRowFormatRanges::aRowFormatRanges.

Then in ScXMLExport::ExportFormatRanges, trying to export formats
for the first (default-formatted) rows, calls to GetFormatRanges
left pRowFormatRanges empty, meaning that nMaxRows were 0, and no
advance happened in the loop -> hang. (Maybe a similar situation
caused commit b36a8a532b3ee6521d80277cb32a6936c0b09320 - busy loop
seen on ods export attempt, 2023-12-07.)

This change avoids unintended modification of the target document,
by creating a fake "source" document to use in ResetClip.

Also, this changes OSL_ENSURE to an assert, and fails export with
XMLERROR_CANCEL | XMLERROR_FLAG_SEVERE error, when nMaxRows is 0
in ScXMLExport::ExportFormatRanges - same as what the mentioned
commit b36a8a532b3ee6521d80277cb32a6936c0b09320 did in an adjacent
branch.

cherry-pick from: 17fb6ff6d163c7037e1c66d28c229473ab77717e
(tdf#170567: Avoid resetting destination document's data)
Original unit test was not added in this cherry-pick.

Change-Id: I3839ef0d2cb42d33cfc0b36b329658e159022586
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198609
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200892
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>